Add spawn weight system